bk_ida/gccida/c1/ix86_split_long_move
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9191:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9191:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9203:4: error: expected ';' after expression
rtx x; // [rsp+0h] [rbp-68h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9203:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+0h] [rbp-68h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9204:4: error: expected ';' after expression
rtx v27; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9204:5: error: use of undeclared identifier 'v27'
rtx v27; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9205:4: error: expected ';' after expression
rtx v28; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9205:5: error: use of undeclared identifier 'v28'
rtx v28; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9206:4: error: expected ';' after expression
rtx parts; // [rsp+18h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9206:5: error: use of undeclared identifier 'parts'
rtx parts; // [rsp+18h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9207:4: error: expected ';' after expression
rtx memref; // [rsp+20h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9207:5: error: use of undeclared identifier 'memref'
rtx memref; // [rsp+20h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9208:4: error: expected ';' after expression
rtx y; // [rsp+28h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9208:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+28h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9222:1: error: use of undeclared identifier 'v14'
v14 = copy_rtx( *operands); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9223:13: error: use of undeclared identifier 'v14'
*operands = v14; 
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9224:14: error: use of undeclared identifier 'v14'
*( ( _BYTE *)v14 + 2) = 5 - ( ( target_flags & 0x2000000) == 0); 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9243:12: error: use of undeclared identifier 'parts'; did you mean 'puts'?
p_parts = &parts; 
           ^~~~~
           puts
/usr/include/stdio.h:632:12: note: 'puts' declared here
extern int puts (const char *__s);
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/i386.c:9244:50: error: use of undeclared identifier 'machine_mode'
v6 = ix86_split_to_parts( operands[1], &parts, ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_split_long_move/src/obj/i386.o] Error 1
